<resources>
    <string name="app_name">Селезнев Александр</string>
    <string name="about_me">
        Я родился в 1984 году. С малых лет у меня были интересы с технике и компьютерам. К сожалению по достижению определенного количества лет планы
        родителей разошлись с моими и я пошел учится на юриста. ОДнако меня всегда тянуло к компьютерам и программированию. Теперь я хочу наверстать упущенное.
    </string>
    <string name="my_mail">samoubica@post.ru</string>
    <string name="random_number">5</string>
    <string name="reit">Рейтинг</string>
    <string name="string_of_code">Написано строк кода</string>
    <string name="projects">Проектов</string>
    <string name="telefon_number_icon_desc">telefon_number_icon</string>
    <string name="telefon_number_hint">Мобильный телефон</string>
    <string name="telephone_call_desc">telephone_call</string>
    <string name="send_e_mail">send e-mail</string>
    <string name="change_profile_photo">Изменить фотогрфию профиля</string>
    <string name="user_profile_dialog_gallery">Загрузить из галереи</string>
    <string name="user_profile_dialog_photo">Сделать снимок</string>
    <string name="user_profiile_dialog_cancel">Отмена</string>
    <string name="user_profile_dialog_title">Изменить фотографию пользователя</string>
    <string name="user_profile_photo_choose_messanger">выберите фото</string>
    <string name="login_text">Вход в личный кабинет</string>
    <string name="email_user">myMail@myDomain.com</string>
    <string name="mail">Адрес электронной почты</string>
    <string name="password_text">Asd2asdSCc</string>
    <string name="get_password">Вспомнить имя пользователя и пароль</string>
</resources>
