<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/grey"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/random_number"
                    android:textSize="40sp"
                    android:gravity="bottom|center"
                    android:layout_marginBottom="0dp"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/reit"
                    android:gravity="top|center"
                    android:textColor="@color/white"/>

            </LinearLayout>
            <View
                style="@style/vertical_gray_line"/>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.6"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/random_number"
                    android:textSize="40sp"
                    android:gravity="bottom|center"
                    android:layout_marginBottom="0dp"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/string_of_code"
                    android:gravity="top|center"
                    android:textColor="@color/white"/>

            </LinearLayout>
            <View
                style="@style/vertical_gray_line"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/random_number"
                    android:textSize="40sp"
                    android:gravity="bottom|center"
                    android:layout_marginBottom="0dp"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/projects"
                    android:gravity="top|center"
                    android:textColor="@color/white"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">
            <ImageView
                android:id="@+id/call_img"
                style="@style/icon_left"
                android:src="@drawable/ic_phone_black_24dp"
                android:contentDescription="@string/telefon_number_icon_desc" />

            <LinearLayout
                style="@style/center">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/telefon_number_hint"
                        android:text="+79161161616"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:focusable="false"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/user_phone_img"
                style="@style/icon_right"
                android:src="@drawable/ic_phone_in_talk_black_24dp"
                android:contentDescription="@string/telephone_call_desc"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/liner_size"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/size_large_72"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">
            <ImageView
                style="@style/icon_left"
                android:contentDescription="@string/send_e_mail"
                android:src="@drawable/ic_send_black_24dp"/>

            <LinearLayout
                style="@style/center">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="Адрес электронной почты"
                        android:text="myMail@domen.com"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:focusable="false"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/mail_send_img"
                style="@style/icon_right"
                android:src="@drawable/ic_email_black_24dp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/liner_size"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/size_large_72"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">
            <ImageView
                style="@style/icon_left"
                android:src="@drawable/vk_circle"/>

            <LinearLayout
                style="@style/center">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/vk_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"
                        android:hint="Профиль в VK"
                        android:text="http://vk.com/id370575593"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:focusable="false"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/vk_profile_img"
                style="@style/icon_right"
                android:src="@drawable/ic_remove_red_eye_black_24dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/liner_size"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/size_large_72"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">
            <ImageView
                style="@style/icon_left"
                android:src="@drawable/github_circle"/>

            <LinearLayout
                style="@style/center">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/git_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"
                        android:hint="Репозиторий"
                        android:text="SeleznevAM/DevIntensive"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:focusable="false"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/git_profile_img"
                style="@style/icon_right"
                android:src="@drawable/ic_remove_red_eye_black_24dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/liner_size"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/size_large_72"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8">
            <ImageView
                style="@style/icon_left"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <LinearLayout
                style="@style/center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/about_me"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:hint="О Себе"
                        android:text="@string/about_me"
                        android:enabled="false"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:focusable="false"
                        android:fontFamily="sans-serif-condensed"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/liner_size"
            android:background="@color/grey_light"
            android:layout_marginLeft="@dimen/size_large_72"/>

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>